--- a/Overview.Rmd
+++ b/Overview.Rmd
@@ -24,24 +24,25 @@ library(cowplot)
 
 # Background
 ### or why this has taken so long  {data-height=300}
+1. Delays
+    - Basically, I had to learn a lot of new statistics and the associated diagnostics which are time consuming to learn and perform.  When the diagnostics weren't supported, I had to find solutions.    
+    - Was off for 2 months.  
+    - Had to finish off the capelin work.  
 
-1. Basically, I had to learn a lot of new statistics and the associated diagnostics which are time consuming to learn and perform.  When the diagnostics weren't supported, I had to find solutions.    
-2. Was off for 2 months.  
-3. Had to finish off the capelin work.  
-
-### New stats  {data-height=600}
+2. New stats  
 The original analysis used glm with Poisson or gamma distributions.  There are several issues to consider:  
+    - This approach did not account for variance in the estimates of density/biomass but I think that this is OK because these variances are small.  
+    - Distribution:  
+        - A. Poisson is a discrete distribution and these are non-discrete data.  
+        - Issues of zeros.  
+            - While Gamma (and Poisson) can handle zeros, there are issues with too many zeros and what kind they are.  There are zero-inflated models which deal with all kinds of zeros and hurdle models which deal only with true zeros, i.e., there really are no fish of species X and age-class Y in the pool.  Keith Clarke believes that these are rue zeros.  
+        - C. Independence: The mean of each site by year is OK but does not allow temporal dependence to be assessed.  Hence, the need for random effects.  
+    - Diagnostics: Package Dharma is a bit tricky to figure out and matching these results to sites took a while.  Also, temporal resids often required different statistical models to remove the effects.  
 
-1. This approach did not account for variance in the estimates of density/biomass but I think that this is OK because these variances are small.
+The solution as I see it is to use GLMM with zeroinflated gamma distributions or Tweedie.  This allows for extra zeros, non-discrete values, and especially, the non-independence of sites.
 
-2. Distribution: there are several issues here.    
-  - A. Poisson is a discrete distribution and these are non-discrete data.  
-  - B. Issues of zeros.  While Gamma (and Poisson) can handle zeros, there are issues with too many zeros and what kind they are.  There are zero-inflated models which deal with all kinds of zeros and hurdle models which deal only with true zeros, i.e., there really are no fish of species X and age-class Y in the pool.  Keith Clarke believes that these are rue zeros.  
-  - C. Independence: The mean of each site by year is OK but does not allow temporal dependence to be assessed.  
-  The solution as I see it is to use GLMM with zeroinflated gamma distributions or Tweedie.  This allows for extra zeros, non-discrete values, and especially, the non-independence of sites.
 
-### Diagnostics  {data-height=100}
-Package Dharma is a bit tricky to figure out and matching these results to sites took a while.  Also, temporal resids often required different statistical models to remove the effects.  
+
 
   
 BT {data-navmenu="Summary_all"}
@@ -246,6 +247,7 @@ summary(bt.glmm1)
 
 Diagnostics {data-navmenu="Analysis"}
 =====
+
 {.tabset}
 -------------------------------------
 
@@ -317,6 +319,113 @@ spatialAutoCorrBase_fun(bt.np, bt.glmm1_simres_recalcSpace, 30, -25)
 ```{r, eval=T,prompt=T,  comment = F}
 spatialAutoCorrGG_fun(bt.np.biomass.all, -26, 22)
 ```
+
+
+BTYOY {data-navmenu="Analysis"}
+=====
+
+
+Column 
+-------------------------------------
+
+### BACI plot
+```{r}
+baci.plot(btyoy.np.biomass.baci, "b")
+```
+
+Column 
+-------------------------------------
+
+### GLMM analysis
+```{r, eval=T,prompt=T, echo = F, comment = F}
+btyoy.glmm4_new1 <- glmmTMB(
+  Biomass_100 ~ Time*Treatment + Treatment*I(as.numeric(Year)^2) + (1 | Year),
+  #  Biomass_100 ~ Time + Treatment + Treatment*I(as.numeric(Year)^2) + (1 | Year),
+  dispformula = ~ Int,
+  family = tweedie, # link is log
+  REML = TRUE,
+  data = btyoy.np
+)
+
+# summary(bt.glmm1)
+```
+
+<div style="height: 400px; overflow-y: scroll;">
+```{r}
+summary(btyoy.glmm4_new1)
+```
+</div>
+
+
+
+AS {data-navmenu="Analysis"}
+=====
+
+
+Column 
+-------------------------------------
+
+### BACI plot
+```{r}
+baci.plot(as.np.density.baci, "b")
+```
+
+Column 
+-------------------------------------
+
+### GLMM analysis
+```{r, eval=T,prompt=T, echo = F, comment = F}
+as.glmm3 <- glmmTMB(
+  Biomass_100 ~ Time * Treatment + (1 | Year),
+  family = tweedie, # link is log
+  REML = TRUE,
+  data = as.np
+)
+
+# summary(bt.glmm1)
+```
+
+<div style="height: 400px; overflow-y: scroll;">
+```{r}
+summary(as.glmm3)
+```
+</div>
+
+
+
+ASYOY {data-navmenu="Analysis"}
+=====
+
+
+Column 
+-------------------------------------
+
+### BACI plot
+```{r}
+baci.plot(asyoy.np.biomass.baci, "b")
+```
+
+Column 
+-------------------------------------
+
+### GLMM analysis
+```{r, eval=T,prompt=T, echo = F, comment = F}
+asyoy.glmm2 <- glmmTMB(
+  Biomass_100 ~ Time * Treatment + (1 | Year),
+  family = ziGamma(link = "log"),
+  ziformula = ~1,
+  REML = TRUE,
+  data = asyoy.np
+)
+
+# summary(bt.glmm1)
+```
+
+<div style="height: 400px; overflow-y: scroll;">
+```{r}
+summary(asyoy.glmm2)
+```
+</div>
 
 
 
@@ -405,7 +514,7 @@ p34
 
 # Notes
 
-On GLMM analysis, intercept = lower right; int + TRT = upper right, int + Time = lower left, int + Time + Trt + interaction = upper left
+On GLMM analysis, intercept = lower right; int + TRT = upper right, int + Time = lower left, int + Time + Trt + interaction = upper left.  Remember these are on log scale so transform back with Euler's number (e^x).
 
 Temporal autocorrelation - for how to intepret resids, see:  https://cran.r-project.org/web/packages/DHARMa/vignettes/DHARMa.html#workflow-in-dharma  
 
